<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Routes of the Awgustow Canal</string>
  <string name="title_activity_home">Home</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Grodno Visa Free official website</string>
  <string name="nav_header_subtitle">https://grodnovisafree.by</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="title_about_app" translatable="false">Routes of the Awgustow Canal v%s (build %d)</string>

  <!--VIEW TEXT-->
  <string name="view_delete_database">Delete database</string>
  <string name="view_clean_map">Clean map</string>
  <string name="view_delete_content_folder">Delete content folder</string>
  <string name="view_refresh_map_file">Update map file</string>
  <string name="view_start">Start</string>
  <string name="view_stop">Stop</string>
  <string name="view_next">Next</string>
  <string name="view_start_player">Start player</string>
  <string name="view_select_language">Change to Russian</string>

  <!--MENU ITEM NAME-->
  <string name="menu_item_settings">Settings</string>
  <string name="menu_item_routes">Routes</string>
  <string name="menu_item_categories">Catalog objects</string>
  <string name="menu_item_types_object">Types Object menu</string>
  <string name="menu_item_distance">Distance menu</string>
  <string name="menu_item_showing_selected_poi">Showing all objects</string>
  <string name="menu_item_showing_all_turn">Showing all turn</string>

  <!--SCREEN NAME TITLE-->
  <string name="map_fragment">Map</string>
  <string name="details_fragment">Details</string>
  <string name="settings_fragment">Settings</string>
  <string name="list_routes_fragment">Route Catalog</string>
  <string name="list_objects_fragment">Catalog objects</string>
  <string name="about_fragment">About</string>


  <!--SCREEN SETTINGS-->
  <string name="language">Language</string>


  <!--ERRORS MESSAGES-->
  <string name="error_snackbar_open_settings">Open settings</string>
  <string name="error_snackbar_do_not_have_permission_access_location">Don`t have permission access fine location</string>
  <string name="error_snackbar_do_not_have_permission_write_on_the_storage">Don`t have permission write on the storage</string>
  <string name="error_copy_data_error">Copy data error</string>
  <string name="error_please_refresh_your_database">"Empty data, please refresh your database"</string>
  <string name="error_database_not_found">Database not found</string>
  <string name="error_not_find_map_file">Not find map file</string>

  <!--SUCCESS MESSAGES-->
  <string name="success_copy_database_success">Copy database success</string>
  <string name="success_database_deleted">Database deleted</string>
  <string name="success_map_file_updated">Map file updated</string>

  <string name="dialog_types_objects">Types objects</string>
  <string name="dialog_radius_in_meters">Radius (in meters)</string>
  <string name="message_once_more_to_exit">Once more to exit</string>

  <!--LOCALISATION-->
  <string name="locale">en</string>
  <string name="lang_ru" translatable="false">Русский</string>
  <string name="lang_en" translatable="false">English</string>
  <string name="lang_ru_short" translatable="false">ru</string>
  <string name="lang_en_short" translatable="false">en</string>
  <string-array name="pref_languages_titles">
    <item>@string/lang_ru</item>
    <item>@string/lang_en</item>
  </string-array>
  <string-array name="pref_languages_values">
    <item>@string/lang_ru_short</item>
    <item>@string/lang_en_short</item>
  </string-array>


  <string-array name="single_items">
    <item>1000</item>
    <item>500</item>
    <item>250</item>
    <item>100</item>
  </string-array>


<!--NEED SORT BY GROUP (IT'S STACK)-->
  <string name="email_address_iac" translatable="false">iac@grsu.by</string>
  <string name="email_subject_feedback" translatable="false">Feedback: Cycling routes for Android</string>
  <string name="action_about_openURL">Open in browser</string>
  <string name="title_about_contact_developer">Contact developer</string>
  <string name="action_about_contact_developer">Write an Email</string>
  <string name="title_about_rate_app">Rate this app</string>
  <string name="action_about_rate_app">Open in Play Store</string>
  <string name="duration">Duration</string>
  <string name="distance">Distance</string>
  <string name="short_kilometers">km</string>
  <string name="short_meters">m</string>
  <string name="short_hour">h</string>
  <string name="short_minute">min</string>
  <string name="load_more">Load more</string>
  <string name="download_route">Download route</string>
  <string name="about_route">About route</string>
  <string name="download">Download</string>
  <string name="update">Update</string>
  <string name="no_internet_connection">No internet connection</string>
  <string name="device_searching">Positioning</string>
  <string name="wait_please">Wait please…</string>
  <string name="warning">Warning!</string>
  <string name="you_are_out_of_map">You are out of map</string>
  <string name="click_to_exit">Click to exit</string>
  <string name="load_route">Load route</string>
  <string name="updating_route">Updating route</string>
  <string name="turn_on_gps">For correct work application turn on GPS</string>
  <string name="empty_list">The list is empty</string>
  <string name="open_on_map">Open on map</string>
  <string name="go_to_route">Go to route</string>
  <string name="provide_access">Provide access</string>
  <string name="provide_access_description">Give the application access to the memory in the settings of your device, otherwise you will not be able to use the application.</string>
  <string name="next">Next</string>
  <string name="exit">Exit</string>
  <string name="preview_provide_access">Give your application access to memory and location.</string>
  <string name="preview_provide_access_description">To download maps, watch places around you and use navigation.</string>
  <string name="radius_in_meters">radius %d meters</string>
  <string name="my_tab">My routes</string>
  <string name="all_tab">All routes</string>
  <string name="route">Route</string>
  <string name="details">Details</string>
  <string name="address">Address</string>
  <string name="email">Emails</string>
  <string name="phone">Phones</string>
  <string name="link">Links</string>
  <string name="retry_again_later">Retry again later</string>
  <string name="openstreetmap_contributors" translatable="false">© OpenStreetMap contributors</string>
  <string name="error.message.update">Error updating data</string>
  <string name="cancel">Cancel</string>
  <string name="check_update">Route update check completed</string>
  <string name="check_update_fail">Failed to check for updates</string>
</resources>
