<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".fragments.setting.SettingsFragment">

  <Button
    android:id="@+id/btn_fragment_settings_clear_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/view_delete_database"/>

  <Button
    android:id="@+id/btn_fragment_settings_clear_map_cache"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/view_clean_map"/>

  <Button
    android:id="@+id/btn_fragment_settings_delete_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/view_delete_content_folder"/>

  <Button
    android:id="@+id/btn_fragment_settings_delete_map_file"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/view_refresh_map_file"/>

  <Button
    android:id="@+id/btn_fragment_settings_change_language"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/view_select_language"/>

</LinearLayout>