<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:divider="@android:drawable/divider_horizontal_dark">
    <ListPreference
      android:entries="@array/pref_languages_titles"
      android:entryValues="@array/pref_languages_values"
      android:key="language"
      android:negativeButtonText="@android:string/cancel"
      android:title="@string/language"/>

    <Preference
      android:key="content"
      android:title="@string/view_delete_database"/>
    <Preference
      android:key="map_content"
      android:title="@string/view_clean_map"/>
    <Preference
      android:key="map_delete_file"
      android:title="@string/view_refresh_map_file"/>
    <!--<Preference
      android:key="newIntent"
      android:title="@string/view_refresh_map_file"/>-->

  </PreferenceCategory>

</PreferenceScreen>