<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_routes"
      android:icon="@drawable/ic_menu_routes"
      android:title="@string/menu_item_routes" />
    <item
      android:id="@+id/nav_objects"
      android:icon="@drawable/ic_menu_objects"
      android:title="@string/menu_item_categories"
      android:visible="true" />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_menu_settings"
      android:title="@string/menu_item_settings" />
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/ic_menu_about"
      android:title="@string/about_fragment" />
    <item
      android:id="@+id/nav_send"
      android:icon="@drawable/ic_menu_send"
      android:title="Send"
      android:visible="false" />
    <item
      android:id="@+id/nav_camera"
      android:icon="@drawable/ic_menu_camera"
      android:title="Import"
      android:visible="false" />
  </group>

</menu>
