<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.MainActivity">

  <ProgressBar
    android:id="@+id/pb_fragment_splash_progress"
    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_above="@id/tv_fragment_splash_title"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginBottom="20dp"
    android:visibility="gone"
    tools:visibility="visible" />

  <TextView
    android:id="@+id/tv_fragment_splash_title"
    style="@style/MaterialTextView"
    android:layout_centerInParent="true"
    android:layout_marginStart="45dp"
    android:layout_marginEnd="45dp"
    android:text="@string/preview_provide_access"
    android:textSize="25sp" />

  <TextView
    android:id="@+id/tv_fragment_splash_description"
    style="@style/MaterialTextView"
    android:layout_below="@id/tv_fragment_splash_title"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="50dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="50dp"
    android:text="@string/preview_provide_access_description"
    android:textSize="15sp" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_fragment_splash_close"
    style="@style/MaterialButton.Splash.Icon"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="32dp"
    android:layout_marginBottom="16dp"
    android:text="@string/exit"
    app:icon="@drawable/ic_close"
    tools:visibility="visible" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_fragment_splash_next"
    style="@style/MaterialButton.Splash.Icon"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="16dp"
    android:text="@string/next"
    app:icon="@drawable/ic_arrow_forward"
    app:iconGravity="end" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_fragment_splash_settings"
    style="@style/MaterialButton.Splash"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="16dp"
    android:text="@string/settings_fragment"
    android:visibility="gone"
    tools:visibility="invisible" />
</RelativeLayout>